# airlinesAPI-rust

./: .gitignore  Cargo.toml  File Structure.md  Folder structure.md  Guide.md  roadmap.txt
src/: config.rs  db.rs  error.rs  logging.rs  main.rs
src/auth/: mod.rs
src/db/: mod.rs
src/handlers/: auth.rs  health_check.rs  mod.rs  route_handler.rs  user.rs
src/middleware/: auth.rs  mod.rs
src/models/: mod.rs  route.rs  user.rs
src/routes/: auth.rs  mod.rs  users.rs
src/utils/: date_format.rs  mod.rs
