[package]
name = "airlinesAPI-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
axum-server = "0.7.2"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
jsonwebtoken = "9.1"
uuid = { version = "1.4", features = ["v4", "serde"] }
bcrypt = "0.15"
thiserror = "1.0"
